fix autocalculate height on mobile devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,24 +20,6 @@
   }
 }
 
-@media (max-width: 991px){
-  html {
-    font-size: 12px;
-  }
-}
-
-@media (max-width: 767px){
-  html {
-    font-size: 11px;
-  }
-}
-
-@media (max-width: 575px){
-  html {
-    font-size: 10px;
-  }
-}
-
 .navbar {
   box-shadow: 0 5px 5px -5px rgba(0,0,0,.5);
   -webkit-box-shadow: 0 5px 5px -5px rgba(0,0,0,.5);
@@ -89,4 +71,27 @@
   background-size: auto auto;
   padding: 150px 0 0 0;
   text-align: left;
+}
+
+@media (max-width: 991px){
+  html {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 767px){
+  html {
+    font-size: 11px;
+  }
+}
+
+@media (max-width: 575px){
+  html {
+    font-size: 10px;
+  }
+}
+@media screen and (min-width:320px) and (max-width:767px) and (orientation:landscape) {
+  .section {
+    padding: 70px 0 0 0;
+  }
 }
